--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
     text-align: center;
-    background-image: url("https://wallpaperaccess.com/full/1314202.jpg");
+    background-image: url("https://static.vecteezy.com/system/resources/previews/002/774/066/original/abstract-green-cube-pattern-on-dark-blue-background-modern-lines-square-mesh-simple-flat-geometric-design-you-can-use-for-cover-poster-banner-web-flyer-landing-page-print-ad-vector.jpg");
     background-size: cover;
 }
 
